// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BeaconInfo renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#ff9900",
        "borderRadius": 50,
        "elevation": 8,
        "paddingHorizontal": 30,
        "paddingVertical": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#fff",
          "fontSize": 36,
          "fontWeight": "bold",
          "textAlign": "center",
          "textTransform": "uppercase",
        }
      }
    >
      Test Type
    </Text>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <Text />
    <View
      style={
        Object {
          "marginVertical": 10,
          "width": 20,
        }
      }
    />
    <View
      accessible={true}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#009688",
          "borderRadius": 50,
          "elevation": 8,
          "paddingHorizontal": 70,
          "paddingVertical": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#fff",
            "fontSize": 42,
            "fontWeight": "bold",
            "textTransform": "uppercase",
          }
        }
      >
        Test Place
      </Text>
    </View>
  </View>
</View>
`;

exports[`HorizontalSeparator renders correctly 1`] = `
<View
  style={
    Object {
      "height": 1,
      "marginVertical": 10,
      "width": "80%",
    }
  }
/>
`;

exports[`LargeButton renders correctly 1`] = `
<View
  accessibilityLabel="Test accessibility label"
  accessible={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#093f74",
      "elevation": 8,
      "height": "30%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "color": "#fff",
        "fontSize": 42,
        "fontWeight": "bold",
        "justifyContent": "center",
        "textAlign": "center",
        "textTransform": "uppercase",
      }
    }
  >
    Tap to repeat
  </Text>
</View>
`;

exports[`MainScreen renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
      },
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <View
    accessibilityLabel="Tap here to repeat the previous audio output"
    accessible={true}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#093f74",
        "elevation": 8,
        "height": "30%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#fff",
          "fontSize": 42,
          "fontWeight": "bold",
          "justifyContent": "center",
          "textAlign": "center",
          "textTransform": "uppercase",
        }
      }
    >
      Tap to repeat
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 1,
        "marginVertical": 10,
        "width": "80%",
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#ff9900",
          "borderRadius": 50,
          "elevation": 8,
          "paddingHorizontal": 30,
          "paddingVertical": 20,
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "#fff",
            "fontSize": 36,
            "fontWeight": "bold",
            "textAlign": "center",
            "textTransform": "uppercase",
          }
        }
      >
        Point of Interest 
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text />
      <View
        style={
          Object {
            "marginVertical": 10,
            "width": 20,
          }
        }
      />
      <View
        accessible={true}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#009688",
            "borderRadius": 50,
            "elevation": 8,
            "paddingHorizontal": 70,
            "paddingVertical": 20,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#fff",
              "fontSize": 42,
              "fontWeight": "bold",
              "textTransform": "uppercase",
            }
          }
        >
          Cafe 
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": 1,
        "marginVertical": 10,
        "width": "80%",
      }
    }
  />
  <View
    accessibilityLabel="Tap here for more information"
    accessible={true}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#093f74",
        "elevation": 8,
        "height": "30%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#fff",
          "fontSize": 42,
          "fontWeight": "bold",
          "justifyContent": "center",
          "textAlign": "center",
          "textTransform": "uppercase",
        }
      }
    >
      Tap for more info
    </Text>
  </View>
</View>
`;

exports[`VerticalSeparator renders correctly 1`] = `
<View
  style={
    Object {
      "marginVertical": 10,
      "width": 20,
    }
  }
/>
`;
